-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.5.6
-
None
-
-
09eeab6ef (dev), d77e15236 (6.7), ea860aadb (tqtc/lts-6.5), ba60f02f9 (tqtc/lts-6.2)
Clicking on the vowels button crashes the demo on windows
Steps to Reproduce:
- Open In-app purchasing Demo
- Build and run it on Qt 6.5.6 MinGW or MSVC2019
Actual Result:
Clicking on vowels button crashes the demo
Expected Result:
The demo doesn't crash on vowels button click
Reproducibility: 100%
- relates to
-
QTQAINFRA-6224
Qt 6.5.6 LTS Testing
-
- Open
-
| For Gerrit Dashboard: QTBUG-124146 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 553361,2 | Set up InAppPurchaseBackend for platforms other than Android and IOS | 6.7 | qt/qtdoc | Status: MERGED | +2 | 0 |
| 553388,3 | Set up InAppPurchaseBackend for platforms other than Android and IOS | dev | qt/qtdoc | Status: MERGED | +2 | 0 |
| 553740,2 | Set up InAppPurchaseBackend for platforms other than Android and IOS | tqtc/lts-6.5 | qt/tqtc-qtdoc | Status: MERGED | +2 | 0 |
| 553893,5 | Set up InAppPurchaseBackend for platforms other than Android and IOS | tqtc/lts-6.2 | qt/tqtc-qtdoc | Status: MERGED | +2 | 0 |